clusters/homelab/apps/mosquitto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mqtt
  labels:
    name: mqtt
    app: mqtt
    chart: mosquitto
    release: mosquitto
    heritage: fluxcd
